Adjust url to Zen pdf

--- a/posts/2022-03-12-zen.md
+++ b/posts/2022-03-12-zen.md
@@ -7,7 +7,7 @@ tags: mathematics, ∞-cosmoi, talks
 
 Last Friday morning I spoke in the [Topos Institute Colloquium](https://topos.site/topos-colloquium/) on the topic of model independent and synthetic approaches to ∞-category theory. This might be considered part of our virtual book tour for [*The Elements*](https://www.cambridge.org/core/books/elements-of-category-theory/DAC48C449AB8C2C1B1E528A49D27FC6D).
 
-You can [view the video](https://youtu.be/qLkRhKaw5DA) of this talk and play along with my [slides](../pdfs/Zen_and_the_art_of_∞-categories.pdf).
+You can [view the video](https://youtu.be/qLkRhKaw5DA) of this talk and play along with my [slides](/pdfs/Zen_and_the_art_of_∞-categories.pdf).
 
 ## Abstract
 
